Software Renderer (WIP)

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
 	<title>A new Life</title>
 	<link href="assets/favicon.ico" rel="icon" type="image/png" />
 	<link href="assets/style.css" rel="stylesheet" type="text/css" />
-	<!-- <link href="assets/manifest.json" rel="manifest" /> -->
+	<link href="assets/manifest.json" rel="manifest" />
 </head>
 
 <body>
