Software Renderer (WIP)

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,14 @@
 </head>
 
 <body>
-	<div id="app"></div>
+	<div id="app">
+		<div style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; background-color: hsl(30, 50%, 25%); cursor: wait;">
+			<div style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; width: 3.5rem; height: 3.5rem; margin: auto; border-radius: 50%; border: 0.3rem solid transparent; border-bottom-color: hsl(163, 80%, 40%); animation: spinner 1500ms linear infinite;"></div>
+			<div style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; width: 2.5rem; height: 2.5rem; margin: auto; border-radius: 50%; border: 0.3rem solid transparent; border-bottom-color: hsl(163, 80%, 40%); animation: spinner 1000ms linear infinite;"></div>
+			<div style="position: absolute; top: 0; right: 0; bottom: 0; left: 0; width: 1.5rem; height: 1.5rem; margin: auto; border-radius: 50%; border: 0.3rem solid transparent; border-bottom-color: hsl(163, 80%, 40%); animation: spinner 750ms linear infinite;"></div>
+			<div style="position: absolute; color: hsl(163, 80%, 40%); top: calc(50% + 3.4rem); right: 0; left: 0; width: fit-content; margin: auto; padding: 0.3rem 0.5rem; font-family: 'Hind'; font-size: 24px;">Loading…</div>
+		</div>
+	</div>
 </body>
 
 </html>
