remove unnecessary type attribute.

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 	<meta name="description" content="A new Life - Browsergame">
 	<meta name="keywords" content="game">
 	<title>A new Life</title>
-	<link href="assets/favicon.ico" rel="icon" type="image/png" />
-	<link href="assets/style.css" rel="stylesheet" type="text/css" />
+	<link href="assets/favicon.ico" rel="icon" />
+	<link href="assets/style.css" rel="stylesheet" />
 	<link href="assets/manifest.json" rel="manifest" />
 </head>
 
