--- a/src/offline.html
+++ b/src/offline.html
@@ -10,7 +10,7 @@
 	<meta name="description" content="A new Life - Browsergame">
 	<meta name="keywords" content="game">
 	<title>A new Life</title>
-	<link href="assets/favicon.ico" rel="icon" type="image/png" />
+	<link href="assets/favicon.ico" rel="icon" />
 </head>
 
 <body>
